[package]
name = "chui-account-decompiler"
version = "1.3.0"
description = "Chui account decoder"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-account-decompiler"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
chui-config-program = { path = "../programs/config", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-vote-program = { path = "../programs/vote", version = "=1.9.29" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.9.0"

chui-account-program = { path = "../programs/chui-account-program" }
chui-relying-party-program = { path = "../programs/chui-relying-party-program" }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
