/**
 * This file contains the Cargo.toml configuration for the `chui-accounts-cluster-bench` package.
 * It specifies the package metadata, dependencies, and dev-dependencies.
 * The package is used for benchmarking the accounts cluster in the Chui Blockchain project.
 * For more information, refer to the repository and homepage URLs provided.
 */

[package]
authors = ["Chui Developers <support@chui.network>"]
edition = "2021"
name = "chui-accounts-cluster-bench"
version = "1.3.0"
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
chui-account-decompiler = { path = "../account-decompiler", version = "=1.9.29" }
chui-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
chui-client = { path = "../client", version = "=1.9.29" }
chui-core = { path = "../core", version = "=1.9.29" }
chui-faucet = { path = "../faucet", version = "=1.9.29" }
chui-gossip = { path = "../gossip", version = "=1.9.29" }
chui-logger = { path = "../logger", version = "=1.9.29" }
chui-measure = { path = "../measure", version = "=1.9.29" }
chui-net-utils = { path = "../net-utils", version = "=1.9.29" }
chui-runtime = { path = "../runtime", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-streamer = { path = "../streamer", version = "=1.9.29" }
chui-test-validator = { path = "../test-validator", version = "=1.9.29" }
chui-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
chui-version = { path = "../version", version = "=0.6.3" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
chui-local-cluster = { path = "../local-cluster", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
