[package]
authors = ["Chui Developers <support@chui.network>"]
edition = "2018"
name = "chui-bench-tps-evm"
version = "1.0.0"
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.8"
rayon = "1.4.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
chui-clap-utils = { path = "../clap-utils", version = "1.4.0" }
chui-core = { path = "../core", version = "1.4.0" }
chui-genesis = { path = "../genesis", version = "1.4.0" }
chui-client = { path = "../client", version = "1.4.0" }
chui-faucet = { path = "../faucet", version = "1.4.0" }
chui-logger = { path = "../logger", version = "1.4.0" }
chui-metrics = { path = "../metrics", version = "1.4.0" }
chui-measure = { path = "../measure", version = "1.4.0" }
chui-net-utils = { path = "../net-utils", version = "1.4.0" }
chui-runtime = { path = "../runtime", version = "1.4.0" }
chui-sdk = { path = "../sdk", version = "1.4.0" }
chui-gossip = { path = "../gossip", version = "1.9.23" }
chui-streamer = { path = "../streamer", version = "=1.9.29" }
chui-version = { path = "../version", version = "=0.6.3" }
chui-evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
rand_isaac = "0.1.1"
simple_logger = "2.2"

[dev-dependencies]
serial_test = "0.4.0"
serial_test_derive = "0.4.0"
chui-local-cluster = { path = "../local-cluster", version = "1.4.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
