[package]
authors = ["Chui Developers <support@chui.network>"]
edition = "2021"
name = "chui-bench-tps"
version = "1.9.29"
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
chui-core = { path = "../core", version = "=1.9.29" }
chui-genesis = { path = "../genesis", version = "=1.9.29" }
chui-client = { path = "../client", version = "=1.9.29" }
chui-faucet = { path = "../faucet", version = "=1.9.29" }
chui-gossip = { path = "../gossip", version = "=1.9.29" }
chui-logger = { path = "../logger", version = "=1.9.29" }
chui-metrics = { path = "../metrics", version = "=1.9.29" }
chui-measure = { path = "../measure", version = "=1.9.29" }
chui-net-utils = { path = "../net-utils", version = "=1.9.29" }
chui-runtime = { path = "../runtime", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-streamer = { path = "../streamer", version = "=1.9.29" }
chui-version = { path = "../version", version = "=0.6.3" }

[dev-dependencies]
serial_test = "0.5.1"
chui-local-cluster = { path = "../local-cluster", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
