[package]
name = "chui-bloom"
version = "1.9.29"
description = "Chui bloom filter"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-bloom"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
rand = "0.7.0"
serde = { version = "1.0.133", features = ["rc"] }
rayon = "1.5.1"
serde_derive = "1.0.103"
chui-frozen-abi = { path = "../frozen-abi", version = "=1.9.29" }
chui-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
log = "0.4.14"

[lib]
crate-type = ["lib"]
name = "chui_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
