[package]
name = "chui-bucket-map"
version = "1.9.29"
description = "chui-bucket-map"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-bucket-map"
readme = "../README.md"
repository = "https://github.com/chuinetwork/chui"
authors = ["Chui Developers <maintainers@chui.network>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
rayon = "1.5.0"
chui-logger = { path = "../logger", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
memmap2 = "0.5.0"
log = { version = "0.4.11" }
chui-measure = { path = "../measure", version = "=1.9.29" }
rand = "0.7.0"
fs_extra = "1.2.0"
tempfile = "3.2.0"

[lib]
crate-type = ["lib"]
name = "chui_bucket_map"

[[bench]]
name = "bucket_map"
