[package]
name = "chui-clap-utils"
version = "1.9.29"
description = "Chui utilities for the clap"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-clap-utils"
edition = "2021"

[dependencies]
clap = "2.33.0"
rpassword = "5.0"
chui-perf = { path = "../perf", version = "=1.9.29" }
chui-remote-wallet = { path = "../remote-wallet", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
name = "chui_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
