[package]
authors = ["Chui Developers <support@chui.network>"]
edition = "2021"
name = "chui-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-cli-output"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.16.2"
semver = "1.0.6"
serde = "1.0.130"
serde_json = "1.0.72"
chui-account-decompiler = { path = "../account-decompiler", version = "=1.9.29" }
chui-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
chui-client = { path = "../client", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
chui-vote-program = { path = "../programs/vote", version = "=1.9.29" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
