[package]
name = "chui-client-test"
version = "1.9.29"
description = "Chui RPC Test"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-client-test"
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0.72"
serial_test = "0.5.1"
chui-client = { path = "../client", version = "=1.9.29" }
chui-ledger = { path = "../ledger", version = "=1.9.29" }
chui-measure = { path = "../measure", version = "=1.9.29" }
chui-merkle-tree = { path = "../merkle-tree", version = "=1.9.29" }
chui-metrics = { path = "../metrics", version = "=1.9.29" }
chui-perf = { path = "../perf", version = "=1.9.29" }
chui-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
chui-rpc = { path = "../rpc", version = "=1.9.29" }
chui-runtime = { path = "../runtime", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-streamer = { path = "../streamer", version = "=1.9.29" }
chui-test-validator = { path = "../test-validator", version = "=1.9.29" }
chui-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
chui-version = { path = "../version", version = "=0.6.3" }
systemstat = "0.1.10"

[dev-dependencies]
chui-logger = { path = "../logger", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
