[package]
authors = ["Chui Developers <support@chui.network>"]
edition = "2021"
name = "chui-dos"
version = "1.9.29"
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
chui-core = { path = "../core", version = "=1.9.29" }
chui-gossip = { path = "../gossip", version = "=1.9.29" }
chui-logger = { path = "../logger", version = "=1.9.29" }
chui-net-utils = { path = "../net-utils", version = "=1.9.29" }
chui-perf = { path = "../perf", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-streamer = { path = "../streamer", version = "=1.9.29" }
chui-version = { path = "../version", version = "=0.6.3" }
chui-client = { path = "../client", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
