[package]
name = "chui-download-utils"
version = "1.9.29"
description = "Chui Download Utils"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
chui-runtime = { path = "../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "chui_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
