[package]
name = "chui-entry"
version = "1.9.29"
description = "Chui Entry"
authors = ["Chui Developers <support@chui.network>"]
repository = "https://github.com/chuinetwork/chui"
license = "Apache-2.0"
homepage = "https://chui.network/"
documentation = "https://docs.rs/chui-poh"
edition = "2021"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.130"
chui-measure = { path = "../measure", version = "=1.9.29" }
chui-merkle-tree = { path = "../merkle-tree", version = "=1.9.29" }
chui-metrics = { path = "../metrics", version = "=1.9.29" }
chui-perf = { path = "../perf", version = "=1.9.29" }
chui-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
chui-sdk = { path = "../sdk", version = "=1.9.29" }
bincode = "1.3.3"

[dev-dependencies]
matches = "0.1.9"
chui-logger = { path = "../logger", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "chui_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
